# cubexx

./: .gitmodules  CMakeLists.txt
assets/shaders/: default.frag  default.vert  gizmo.frag  gizmo.vert
include/cubexx/: application.hpp  attribute_layout.hpp  camera.hpp  chunk.hpp  cube.hpp  engine.hpp  game.hpp  game_object.hpp  gizmo.hpp  gl_common.hpp  grid.hpp  input.hpp  player.hpp  transform.hpp  utils.hpp  world.hpp  world_generator.hpp
src/: CMakeLists.txt  application.cpp  attribute_layout.hpp  camera.h  camera.hpp  camera_behaviour.hpp  chunk.hpp  chunk_mesh_generator.cpp  chunk_mesh_generator.hpp  chunk_object.hpp  cube.cpp  cube.hpp  game.cpp  game.h  game.hpp  gizmo.cpp  gizmo.hpp  gizmo_object.hpp  gl_common.hpp  grid.cpp  grid.hpp  input.cpp  input.hpp  main.cpp  mesh.cpp  mesh.hpp  mesh_manager.cpp  mesh_manager.hpp  object.hpp  player.h  shader_manager.cpp  shader_manager.hpp  texture2D.cpp  texture2D.hpp  texture_manager.cpp  texture_manager.hpp  transform.hpp  utils.cpp  utils.hpp  world.cpp  (+2 more)
src/core/: camera.h  mesh.h  transform.h  utils.cpp  utils.h
src/cubexx/: application.cpp  chunk_mesh_generator.cpp  cube.cpp  engine.cpp  game.cpp  gizmo.cpp  grid.cpp  input.cpp  player.cpp  utils.cpp  world.cpp  world_generator.cpp
src/game/: chunk.h  chunk_mesh_generator.cpp  chunk_mesh_generator.h  config.h  cube.cpp  cube.h  gizmo.cpp  grid.cpp  grid.h  player.cpp  player.h  world.cpp  world.h  world_generator.cpp  world_generator.h
src/game/cubes/: cube_type.h  cube_type_definition.h  cube_type_registry.h  texture_manager.h
src/game/objects/: block_outline_object.h  chunk_generator_object.cpp  chunk_generator_object.h  chunk_mesh_generator_object.cpp  chunk_mesh_generator_object.h  chunk_unloader_object.cpp  chunk_unloader_object.h  crosshair_object.h  gizmo_object.cpp  gizmo_object.h  grid_object.cpp  grid_object.h  player_object.cpp  player_object.h  world_object.cpp  world_object.h  world_renderer_object.cpp  world_renderer_object.h
